--- a/css/style.css
+++ b/css/style.css
@@ -916,6 +916,7 @@ footer p {
   .banner-section h1 {font-size: 36px;}
   .banner-section p {font-size: 20px;margin: 10px 0;padding: 0;}
   .banner-section ul li img {padding: 10px 0;}
+  .banner-section ul li {padding-right: 0;}
 
   .features .features-items {padding: 50px 20px 14px;}
   .features .features-items p {padding: 40px 0;}
